--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedras Papel y Tijeras</title>
-    <link rel="stylesheet" href="../piedra/css/estilos.css">
-    <script src="../piedra/js/script.js"></script>
+    <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/script.js"></script>
 
 </head>
 
@@ -15,12 +15,12 @@
     <div class="zona-juego">
         <div>
             <h3>Jugador</h3>
-            <img id="imgJugador" src="../piedra/imagenes/piedra.png" width="200">
+            <img id="imgJugador" src="imagenes/piedra.png" width="200">
         </div>
 
         <div>
             <h3>CPU</h3>
-            <img id="imgCPU" src="../piedra/imagenes/piedra.png" width="200">
+            <img id="imgCPU" src="imagenes/piedra.png" width="200">
         </div>
     </div>
 
@@ -29,9 +29,9 @@
     <div class="tirada">
         <div class="opciones">
         <h3>Selecciona tirada</h3>
-        <img src="../piedra/imagenes/piedra.png" width="80" onclick="tirada('piedra')">
-        <img src="../piedra/imagenes/papel.png" width="80" onclick="tirada('papel')">
-        <img src="../piedra/imagenes/tijeras.png" width="80" onclick="tirada('tijeras')">
+        <img src="imagenes/piedra.png" width="80" onclick="tirada('piedra')">
+        <img src="imagenes/papel.png" width="80" onclick="tirada('papel')">
+        <img src="imagenes/tijeras.png" width="80" onclick="tirada('tijeras')">
         </div>
 
         <div class="estadisticas">
